--- a/OffshoreTrack/Views/Cliente/Index.cshtml
+++ b/OffshoreTrack/Views/Cliente/Index.cshtml
@@ -23,7 +23,7 @@
         <div class="card">
             <br />
             <div class="card-body">
-                <table class="table table-striped">
+                <table class="table table-striped" id="tableCliente">
                     <thead>
                         <tr>
                             <th scope="col">Cliente</th>
@@ -53,3 +53,10 @@
     </div>
 </div>
 
+@section Scripts {
+    <script>
+        $(document).ready(function() {
+            $('#tableCliente').DataTable();
+        });
+    </script>
+    }
