--- a/OffshoreTrack/Views/FormaPagamento/Index.cshtml
+++ b/OffshoreTrack/Views/FormaPagamento/Index.cshtml
@@ -23,7 +23,7 @@
         <div class="card">
             <br />
             <div class="card-body">
-                <table class="table table-striped">
+                <table class="table table-striped" id="tableFormaPagamento">
                     <thead>
                         <tr>
                             <th scope="col">Forma de pagamento</th>
@@ -51,3 +51,10 @@
     </div>
 </div>
 
+@section Scripts {
+    <script>
+        $(document).ready(function() {
+            $('#tableFormaPagamento').DataTable();
+        });
+    </script>
+    }
