--- a/OffshoreTrack/Views/Fornecedor/Index.cshtml
+++ b/OffshoreTrack/Views/Fornecedor/Index.cshtml
@@ -23,7 +23,7 @@
         <div class="card">
             <br />
             <div class="card-body">
-                <table class="table table-striped">
+                <table class="table table-striped" id="tableFornecedor">
                     <thead>
                         <tr>
                             <th scope="col">Fornecedor</th>
@@ -56,3 +56,10 @@
     </div>
 </div>
 
+@section Scripts {
+    <script>
+        $(document).ready(function() {
+            $('#tableFornecedor').DataTable();
+        });
+    </script>
+    }
