--- a/OffshoreTrack/Views/Material/Index.cshtml
+++ b/OffshoreTrack/Views/Material/Index.cshtml
@@ -23,7 +23,7 @@
         <div class="card">
             <br />
             <div class="card-body">
-                <table class="table table-striped">
+                <table class="table table-striped" id="tableMaterial">
                     <thead>
                         <tr>
                             <th scope="col">Material</th>
@@ -57,3 +57,10 @@
     </div>
 </div>
 
+@section Scripts {
+    <script>
+        $(document).ready(function() {
+            $('#tableMaterial').DataTable();
+        });
+    </script>
+    }
