--- a/OffshoreTrack/Views/OrdemCompra/Index.cshtml
+++ b/OffshoreTrack/Views/OrdemCompra/Index.cshtml
@@ -23,7 +23,7 @@
         <div class="card">
             <br />
             <div class="card-body">
-                <table class="table table-striped">
+                <table class="table table-striped" id="tableOrdemCompra">
                     <thead>
                         <tr>
                             <th scope="col">ID</th>
@@ -71,3 +71,10 @@
     </div>
 </div>
 
+@section Scripts {
+    <script>
+        $(document).ready(function() {
+            $('#tableOrdemCompra').DataTable();
+        });
+    </script>
+    }
