--- a/OffshoreTrack/Views/ParteSolta/Index.cshtml
+++ b/OffshoreTrack/Views/ParteSolta/Index.cshtml
@@ -23,7 +23,7 @@
         <div class="card">
             <br />
             <div class="card-body">
-                <table class="table table-striped">
+                <table class="table table-striped" id="tableParteSolta">
                     <thead>
                         <tr>
                             <th scope="col">Parte Solta</th>
@@ -55,3 +55,10 @@
     </div>
 </div>
 
+@section Scripts {
+    <script>
+        $(document).ready(function() {
+            $('#tableParteSolta').DataTable();
+        });
+    </script>
+    }
