--- a/OffshoreTrack/Views/Permissao/Index.cshtml
+++ b/OffshoreTrack/Views/Permissao/Index.cshtml
@@ -23,7 +23,7 @@
         <div class="card">
             <br />
             <div class="card-body">
-                <table class="table table-striped">
+                <table class="table table-striped" id="tablePermissao">
                     <thead>
                         <tr>
                             <th scope="col">Tipo  de Permissão</th>
@@ -49,3 +49,10 @@
     </div>
 </div>
 
+@section Scripts {
+    <script>
+        $(document).ready(function() {
+            $('#tablePermissao').DataTable();
+        });
+    </script>
+    }
