--- a/OffshoreTrack/Views/Shared/_Layout.cshtml
+++ b/OffshoreTrack/Views/Shared/_Layout.cshtml
@@ -9,6 +9,13 @@
     <link rel="stylesheet" href="~/css/style.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/OffshoreTrack.styles.css" asp-append-version="true" media="print"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+
+    <!-- Datatables -->
+    <link rel="stylesheet" href="~/css/datatables.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/datatables.min.css" asp-append-version="true" />
+
+    <!-- Fim - Datatables -->
+
 </head>
 <body>
 
@@ -244,10 +251,20 @@
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
 
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script type="text/javascript" src="~/lib/datatables.net-bs5/js/dataTables.bootstrap5.min.js"></script>
+
     <script src="~/lib/jquery.mask.js"></script>
     <script src="~/lib/jquery-mask-plugin/src/jquery.mask.js" type="text/javascript" asp-append-version="true"></script>
 
     <script src="https://cdn.rawgit.com/davidshimjs/qrcodejs/gh-pages/qrcode.min.js"></script>
+
+    <!-- Datatables -->
+    <script src="~/js/dataTables.js" asp-append-version="true"></script>
+
+    <!-- Fim - Datatables -->
+
+
 
     @await RenderSectionAsync("Scripts", required: false)
 </body>
