--- a/OffshoreTrack/Views/Usuario/Index.cshtml
+++ b/OffshoreTrack/Views/Usuario/Index.cshtml
@@ -54,3 +54,10 @@
     </div>
 </div>
 
+@section Scripts {
+    <script>
+        $(document).ready(function() {
+            $('#tableUsuario').DataTable();
+        });
+    </script>
+    }
