update sistema pronto
falta apenas criar mais tipos de permissoes

--- a/OffshoreTrack/Views/Empresa/Edit.cshtml
+++ b/OffshoreTrack/Views/Empresa/Edit.cshtml
@@ -115,6 +115,7 @@ ViewData["Title"]="Edit";
                             <input type="file" class="form-control" id="logoEmpresa" name="logoEmpresa" accept=".png, .jpg, .jpeg">
                         </div>
                         <div class="col-sm-6">
+                            <label for="responsavelEmpresa">Nova Logo:</label>
                             <img id="logoPreview" src="#" alt="Logo da Empresa" style="max-width: 100%; max-height: 150px;">
                         </div>
                     </div>
