--- a/OffshoreTrack/Views/Empresa/Read.cshtml
+++ b/OffshoreTrack/Views/Empresa/Read.cshtml
@@ -81,6 +81,12 @@ ViewData["Title"]="Read";
                         <br>
                         <img id="logoPreview" src="@ViewBag.LogoEmpresa" alt="Logo da Empresa" style="max-width: 100%; max-height: 150px;">
                     </div>
+                    <div class="col-sm-6">
+                        <div class="alert alert-warning" role="alert">
+                            Atenção! Para alterar a logo da empresa, vá até a página de edição.
+                            A logo estará presente em relatórios e impressões de documentos.
+                    </div>
+
                 </div>
             </div>
         </div>
