--- a/OffshoreTrack/Views/Shared/_Layout.cshtml
+++ b/OffshoreTrack/Views/Shared/_Layout.cshtml
@@ -263,9 +263,11 @@
     <script src="~/js/dataTables.js" asp-append-version="true"></script>
 
     <!-- Fim - Datatables -->
-
-
-
+  <footer id="footer" class="footer">
+    <div class="copyright">
+      &copy; OffshoreTrack <strong><span>Desenvolvido por Kezia Campos</span></strong>. <a class="btn btn-primary" href="https://keziacamposcs.github.io/Offshore">OffshoreTrack</a>
+    </div>
+  </footer>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
