--- a/OffshoreTrack/Views/Home/Index.cshtml
+++ b/OffshoreTrack/Views/Home/Index.cshtml
@@ -25,140 +25,127 @@
 
 
 <div class="row">
-    <div class="col-lg-12">
-        <div class="row">
-          <!-- Card -->
-            <div class="col-xxl-4 col-md-6">
-              <div class="card">
-                <div class="card-body">
-                  <h5 class="card-title">Sales <span>| Today</span></h5>
-                  <div class="d-flex align-items-center">
-                    <div class="card-icon rounded-circle d-flex align-items-center justify-content-center">
-                      <i class="bi bi-cart"></i>
-                    </div>
-                    <div class="ps-3">
-                      <h6>145</h6>
-                      <span class="text-success small pt-1 fw-bold">12%</span> <span class="text-muted small pt-2 ps-1">increase</span>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          <!-- Fim Card -->
-          <!-- Card -->
-            <div class="col-xxl-4 col-md-6">
-              <div class="card info-card sales-card">
-                <div class="card-body">
-                  <h5 class="card-title">Sales <span>| Today</span></h5>
-                  <div class="d-flex align-items-center">
-                    <div class="card-icon rounded-circle d-flex align-items-center justify-content-center">
-                      <i class="bi bi-cart"></i>
-                    </div>
-                    <div class="ps-3">
-                      <h6>145</h6>
-                      <span class="text-success small pt-1 fw-bold">12%</span> <span class="text-muted small pt-2 ps-1">increase</span>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          <!-- Fim Card -->
-          <!-- Card -->
-            <div class="col-xxl-4 col-md-6">
-              <div class="card info-card sales-card">
-                <div class="card-body">
-                  <h5 class="card-title">Sales <span>| Today</span></h5>
-                  <div class="d-flex align-items-center">
-                    <div class="card-icon rounded-circle d-flex align-items-center justify-content-center">
-                      <i class="bi bi-cart"></i>
-                    </div>
-                    <div class="ps-3">
-                      <h6>145</h6>
-                      <span class="text-success small pt-1 fw-bold">12%</span> <span class="text-muted small pt-2 ps-1">increase</span>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          <!-- Fim Card -->
+
+    <div class="col-lg-6">
+    
+    <!-- Manutenções -->
+      <div class="card">
+
+        <div class="card-header">
+          <div class="row">
+              <h5 class="card-title">
+                  <i class="bi bi-hammer"></i>
+                  Últimas manutenções realizadas
+              </h5>
+          </div>
         </div>
 
+        <div class="card-body">
+            <table class="table table-striped table-hover">
+              @foreach (var manut in Model.ultimasManutencoes)
+              {
+                <tr>
+                  <td>@manut.manutencao</td>
+                  <td>@manut.data.ToShortDateString()</td>
+                </tr>
+              }
+            </table>
+        </div>
+      </div>
+    <!-- Fim - Manutenções -->
+
+    <!-- Últimas OCs -->
+      <div class="card">
+
+        <div class="card-header">
+          <div class="row">
+              <h5 class="card-title">
+                  <i class="bi bi-coin"></i>
+                  Últimas Ordens de Compra realizadas
+              </h5>
+          </div>
+        </div>
+
+        <div class="card-body">
+            <table class="table table-striped table-hover">
+              @foreach (var oc in Model.ultimasOC)
+              {
+                <tr>
+                  <td>@oc.oc</td>
+                  <td>@oc.moeda @oc.TotalValor</td>
+                  <td>@oc.data_oc.ToShortDateString()</td>
+                </tr>
+              }
+            </table>
+        </div>
+      </div>
+    <!-- Fim - Últimas OCs -->
     </div>
+
+    <div class="col-lg-6">
+      <!-- Contratos com vencimentos proximos -->
+        <div class="card">
+          <div class="card-header">
+            <div class="row">
+              <h5 class="card-title">
+                <i class="bi bi-file-earmark-post"></i>
+                  Contratos para vencer
+              </h5>
+            </div>
+          </div>
+
+          <div class="card-body">
+              <table class="table table-striped table-hover">
+                @foreach (var contrato in Model.contratosParaVencer)
+                {
+                  <tr>
+                    <td>@contrato.contrato</td>
+                    <td><i class="bi bi-exclamation-circle"></i></td>
+                    <td>@contrato.dataFim.ToShortDateString()</td>
+                  </tr>
+                }
+              </table>
+          </div>
+        </div>
+      <!-- Fim - Contratos com vencimentos proximos -->
+
+    <!-- OCs com data prevista próxima -->
+      <div class="card">
+
+        <div class="card-header">
+          <div class="row">
+              <h5 class="card-title">
+                  <i class="bi bi-coin"></i>
+                  Ordens de Compra com data prevista próxima
+              </h5>
+          </div>
+        </div>
+
+        <div class="card-body">
+            <table class="table table-striped table-hover">
+              @foreach (var oc in Model.ordemCompraAtrasado)
+              {
+                <tr>
+                  <td>@oc.oc</td>
+                  <td><i class="bi bi-exclamation-circle"></i></td>
+                  <td>@oc.data_prevista.ToShortDateString()</td>
+                </tr>
+              }
+            </table>
+        </div>
+      </div>
+    <!-- Fim - OCs com data prevista próxima -->
+    </div>
+
 </div>
 
 <div class="row">
-    <div class="col-lg-8">
-      <div class="card">
-        <div class="card-body">
-          <h5 class="card-title">Últimas manutenções</h5>
 
-        </div>
-      </div>
-    </div>
-  <div class="col-lg-4">
-    <div class="card">
-                  <div class="card-body">
-          <h5 class="card-title">Últimas OCs</h5>
-
-              <div class="activity">
-
-                <div class="activity-item d-flex">
-                  <div class="activite-label">32 min</div>
-                  <i class='bi bi-circle-fill activity-badge text-success align-self-start'></i>
-                  <div class="activity-content">
-                    Quia quae rerum <a href="#" class="fw-bold text-dark">explicabo officiis</a> beatae
-                  </div>
-                </div><!-- End activity item-->
-
-                <div class="activity-item d-flex">
-                  <div class="activite-label">56 min</div>
-                  <i class='bi bi-circle-fill activity-badge text-danger align-self-start'></i>
-                  <div class="activity-content">
-                    Voluptatem blanditiis blanditiis eveniet
-                  </div>
-                </div><!-- End activity item-->
-
-                <div class="activity-item d-flex">
-                  <div class="activite-label">2 hrs</div>
-                  <i class='bi bi-circle-fill activity-badge text-primary align-self-start'></i>
-                  <div class="activity-content">
-                    Voluptates corrupti molestias voluptatem
-                  </div>
-                </div><!-- End activity item-->
-
-                <div class="activity-item d-flex">
-                  <div class="activite-label">1 day</div>
-                  <i class='bi bi-circle-fill activity-badge text-info align-self-start'></i>
-                  <div class="activity-content">
-                    Tempore autem saepe <a href="#" class="fw-bold text-dark">occaecati voluptatem</a> tempore
-                  </div>
-                </div><!-- End activity item-->
-
-                <div class="activity-item d-flex">
-                  <div class="activite-label">2 days</div>
-                  <i class='bi bi-circle-fill activity-badge text-warning align-self-start'></i>
-                  <div class="activity-content">
-                    Est sit eum reiciendis exercitationem
-                  </div>
-                </div><!-- End activity item-->
-
-                <div class="activity-item d-flex">
-                  <div class="activite-label">4 weeks</div>
-                  <i class='bi bi-circle-fill activity-badge text-muted align-self-start'></i>
-                  <div class="activity-content">
-                    Dicta dolorem harum nulla eius. Ut quidem quidem sit quas
-                  </div>
-                </div><!-- End activity item-->
-
-              </div>
-
-            </div>
-
-    </div>
-
-  </div>
 
 </div>
+
+
+
 
 @section Scripts {
     @{ await Html.RenderPartialAsync("_ValidationScriptsPartial"); }
